# composAIble-agents

./: .gitignore  Cargo.toml  Readme.md  setup.sh
examples/: DeepSeek_R1.txt  Research_Questionaire.rs  chain_agents1.rs  chain_content_agents.rs  chat.rs  chat_model.rs  check_registry.rs
examples/configs/: deepseek_distilled_r1_32B.json  deepseek_r1_7b.json  granite.json  qwen_1_5b.json  smoltalk.json
examples/utils/: logger.rs
src/agent/: agent.rs  agent_builder.rs  mod.rs
src/chain/: sequential_chain.rs
src/llm/: llm_builder.rs  options.rs  stream_processing.rs
src/model/: client.rs  config_loader.rs  manager.rs  manager_trait.rs  mod.rs  process.rs  server.rs  state.rs  system_memory.rs  types.rs
src/model/adapters/: llama.rs  mod.rs
src/model/adapters/llama/ubuntu/: llama-server
src/model/schemas/: model_config.json
src/tools/downloader/: download.rs
src/vectorstore/sqlite_vec/: sqlite_vec.rs
