[package]
name = "pyano"
version = "0.1.0"
description = "A composable, resource-efficient framework for building AI applications locally"
license = "MIT"
edition = "2021"


[lib]
name = "pyano"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.8"
async-trait = "0.1"
chrono = { version = "0.4.39", features = ["serde"]}
reqwest = { version = "0.12.9", features = ["stream", "json"] }
axum = "0.7.9"
serde_json = "1.0.133"
futures = "0.3.31"
bytes = "1.9.0"
tokio-stream = "0.1.17"
log = "0.4.22"
url = "2.5.4"
scraper = "0.22.0"
env_logger = "0.11.5"
regex = "1.11.1"
sysinfo = "0.33.0"
libc = "0.2.169"
parking_lot = "0.12.3"
indicatif = "0.17.9"
futures-util = "0.3"
rust-bert = "0.23.0"
dirs = "5.0.1"
tch = { version = "0.17.0", features = ["download-libtorch"] }
sqlx = { version = "0.8.2", default-features = false, features = ["postgres", "sqlite", "runtime-tokio-native-tls", "json", "uuid"], optional = true }
sqlite-vec = "0.1.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
pdf = "0.8.0"
colored = "3.0.0"
[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
sqlite-vec = ["sqlx"]
sqlx = ["dep:sqlx"]

[lints.rust]
unused = "allow"
